versioned_docs/version-0.24.0/how-to/react-native/list-other-peers.mdx
---
sidebar_position: 4
---

# List other peers

In order to see other streaming peers, you can use [`usePeers`](../../api/mobile/functions/usePeers). It will return all  
other peers, together with the tracks that they are streaming.

### Example code that show all videos

```tsx
import React from "react";
import { View } from "react-native";
import {
  usePeers,
  VideoRendererView,
} from "@fishjam-cloud/react-native-client";

export function ShowAllPeers() {
  const { remotePeers, localPeer } = usePeers(); // [!code highlight]

  const videoTracks = remotePeers.flatMap(
    (peer) =>
      peer.tracks.filter((track) => track.type === "Video" && track.isActive), // [!code highlight]
  );
  const localTrack = localPeer?.tracks.find((t) => t.type === "Video"); // [!code highlight]

  return (
    <View>
      {localTrack && (
        <VideoRendererView
          key={localTrack.id}
          trackId={localTrack.id}
          videoLayout="FIT"
        />
      )}
      {videoTracks.map((track) => (
        <VideoRendererView
          key={track.id}
          trackId={track.id}
          videoLayout="FIT"
        />
      ))}
    </View>
  );
}
```

:::tip[Enable Picture in Picture]

To allow users to continue watching video in a floating window when they background your app, wrap your video call UI with the `PipContainerView` component. See the [Picture in Picture guide](./picture-in-picture) for more details.

:::
